new changes, few chnages left

--- a/app.json
+++ b/app.json
@@ -12,8 +12,8 @@
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "resizeMode": "cover",
+      "backgroundColor": "#4C6ED7"
     },
     "assetBundlePatterns": [
       "**/*"
