--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~50.0.14",
     "expo-constants": "~15.4.5",
     "expo-font": "~11.10.3",
+    "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
@@ -31,6 +32,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-shadow-2": "^7.0.8",
     "react-native-svg": "^15.1.0",
+    "react-native-timeline-flatlist": "^0.8.0",
     "typescript": "^5.3.0"
   },
   "devDependencies": {
