--- a/app.json
+++ b/app.json
@@ -25,7 +25,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.jatinrn.rneasymyviz"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -34,6 +35,14 @@
       "expo-router",
       "expo-font",
       "expo-secure-store"
-    ]
+    ],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "8f35e3ba-dfa6-4cd5-9d88-dabda1c8c8e2"
+      }
+    }
   }
 }
