--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@gluestack-ui/themed": "^1.1.22",
     "@reduxjs/toolkit": "^2.2.3",
     "@types/react": "~18.2.45",
-    "expo": "~50.0.14",
+    "expo": "50",
     "expo-constants": "~15.4.5",
     "expo-font": "~11.10.3",
     "expo-linear-gradient": "~12.7.2",
